# JobHunter

./: .gitignore  Makefile  README.md  alembic.ini  associate-buyer-at-stitch-fix-4405887532  compose.yml  mise.toml  prometheus.yml  pyproject.toml  ting_details: ExtractedJobPostingDetails,
frontend/: .env.example  components.json  deno.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: index.css  instrumentation.ts  main.tsx  routeTree.gen.ts  router.tsx
frontend/src/api/: client.ts
service_configs/: otel-collector-config.yml  prometheus.yml
service_configs/bootstrap/: bootstrap.sh
services/job_applier/: pyproject.toml
services/job_applier/src/job_applier/: __init__.py
services/job_scraper/: .env.example  cleaned.html  pyproject.toml
services/job_scraper/src/job_scraper/: __init__.py  __main__.py  fetcher.py  main.py  posting_schema.json  posting_schuma.json  process.py  process_request.py  producer.py  scrape_text.py  scraper.py  search_worker.py
services/job_scraper/src/job_scraper/extractors/: generic_extractor.py  linkedin_extractor.py
services/job_scraper/src/job_scraper/scrapers/: base_scraper.py  html_cache.py  linkedin_authenticated_scraper.py  linkedin_list_fetcher.py  linkedin_scraper.py  models.py  session_store.py
services/webapi/: pyproject.toml
services/webapi/alembic/versions/: 43b424abe644_update_schema.py  6fca42c0a8fd_update_schema.py  7978da17cefb_link_user_with_posting_add_external_.py  a1c2e3f4b5d6_add_attempt_and_user_board_index.py  d7508ab66e9c_update_schema.py  ecefbfc17630_create_initial_tables.py
services/webapi/src/webapi/: __init__.py  main.py  producer.py
services/webapi/src/webapi/models/: posting.py  user.py
services/webapi/src/webapi/routes/: ai.py  jobs.py  posting.py  profileSettings.py  resumeTemplates.py  user.py
services/webapi/src/webapi/services/: ScrapeJobService.py
(+58 files in other folders)
