[project]
name = "webapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "George", email = "cradplay@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115,<1",
  "pydantic>=2.0,<3",
  "pydantic-settings>=2.0,<3",
  "alembic>=1.13,<2",
  "langchain", 
  "langchain-openrouter",
  "asyncio",
  "confluent-kafka",
  "db",
  "common",
]

[project.scripts]
webapi = "webapi:main"

[tool.uv.sources]
db = { workspace = true }
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
